--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,12 @@
 
 .cards {
     width: 70%;
-    height: 70%;
+    height: 50%;
     background-color: aquamarine;
     display: flex;
-
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .card {
@@ -49,19 +51,22 @@
     justify-content: center;
     position: absolute;
     backface-visibility: hidden;
-    transition: all .5s;
+    transition: all 0.5s;
     transform-style: preserve-3d;
 }
 
 .back-face {
     transform: rotateY(180deg);
-
-}
-
-.card:hover .back-face {
-    transform: rotateY(0deg);
-}
-
-.card:hover .front-face {
+  }
+  .front {
     transform: rotateY(-180deg);
-}
+  }
+  .back {
+    transform: rotateY(0deg);
+  }
+  .img{
+    width: 80%;
+    height: 80%;
+  }
+  .disab ::disabled{
+  }
