--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,15 @@
     transition: all 0.5s;
     transform-style: preserve-3d;
 }
+.time{
+  color: green;
+  font-family: 'Roboto';
+    font-weight: 700;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+
+}
 
 .back-face {
     transform: rotateY(180deg);
