--- a/css/style.css
+++ b/css/style.css
@@ -76,5 +76,17 @@
     width: 80%;
     height: 80%;
   }
-  .disab ::disabled{
+  @media (max-width: 612px){
+    .title{
+      width: 90%;
+      text-align: center;
+    }
+    .cards{
+      flex-direction: column;
+      height: 100%;
+      align-items: center;
+    }
+    .card{
+      margin-bottom: 32px;
+    }
   }
